# LittleEngineVk

./: .appveyor.yml  .appveyor.yml.fallback.in  .appveyor.yml.in  .clang-format  .clang-tidy  .editorconfig  .editorconfig.template  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  config.cmake.in  vk-setup-env.sh  vk_setup_env.sh
demo/: CMakeLists.txt  level.cpp  level.hpp  main.cpp
demo/android/: .gitignore  build.gradle  settings.gradle
demo/android/app/: .gitignore  build.gradle.in
demo/data/: demo.input  demo.manifest
demo/data/shaders/: basic.frag  basic.vert  lit.frag  lit.vert  skybox.frag  skybox.vert  test.vert  tex.frag  ui.frag  ui.vert
demo/dumb_ecf/: entity.hpp  registry2.hpp  view.hpp
demo/dumb_ecf/detail/: archetype.hpp  sign.hpp  tarray.hpp
demo/dumb_ecf/src/: registry2.cpp
demo/levels/: demo.cpp  demo.hpp  test.cpp  test.hpp
demo/lib/: CMakeLists.txt  demo.cpp  demo.hpp
demo/lib/engine/: camera.hpp  config.hpp  engine.hpp  ref_tree.hpp  scene_node.hpp
demo/tests/: ecs_test.cpp
engine/: CMakeLists.txt  header_list.cmake
engine/include/le/: engine.hpp  environment.hpp  error.hpp  frame_profile.hpp  runtime.hpp  stats.hpp
engine/include/spaced/: engine.hpp  runtime.hpp
engine/src/: CMakeLists.txt  build_version.cpp  build_version.hpp.in  camera.cpp  engine.cpp  node_tree.cpp  node_tree_serializer.cpp  runtime.cpp  transform.cpp
engine/src/audio/: CMakeLists.txt  device.cpp  music.cpp  sound.cpp
engine/src/cli/: CMakeLists.txt  command.cpp  console.cpp  driver.cpp
engine/src/console/: CMakeLists.txt  console.cpp
engine/src/core/: CMakeLists.txt  logger.cpp  string_trie.cpp  transform.cpp  version.cpp
engine/src/graphics/: CMakeLists.txt  allocator.cpp  camera.cpp  command_buffer.cpp  dear_imgui.cpp  defer.cpp  descriptor_updater.cpp  device.cpp  dynamic_atlas.cpp  fallback.cpp  geometry.cpp  image_barrier.cpp  (+14 more)
example/: CMakeLists.txt  attribution.txt  example.cpp
ext/: CMakeLists.txt
ext/dear_imgui/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/physfs/: CMakeLists.txt
ext/stb/: CMakeLists.txt
ext/tinyobjloader/: CMakeLists.txt
ext/vk_hpp/: CMakeLists.txt
ext/vma/: CMakeLists.txt
ext/vulkan_hpp/: CMakeLists.txt
importer/: CMakeLists.txt  importer.cpp
importer/src/: CMakeLists.txt  main.cpp
levk/build_interface/: CMakeLists.txt
levk/core/: CMakeLists.txt  core_includes.cmake
levk/engine/: CMakeLists.txt
levk/gameplay/: CMakeLists.txt
levk/graphics/: CMakeLists.txt  graphics_includes.cmake
levk/window/: CMakeLists.txt
libs/core/: CMakeLists.txt  core_includes.cmake
libs/dens/: .editorconfig  CMakeLists.txt
libs/engine/: CMakeLists.txt
libs/graphics/: CMakeLists.txt  graphics_includes.cmake
libs/levk_imgui/: CMakeLists.txt
libs/window/: CMakeLists.txt
scene/: CMakeLists.txt  header_list.cmake
scene/src/: CMakeLists.txt  collision.cpp  component.cpp  entity.cpp  freecam_controller.cpp  mesh_animator.cpp  mesh_renderer.cpp  particle_system.cpp  runtime.cpp  scene.cpp  scene_manager.cpp  scene_renderer.cpp  shape_renderer.cpp  sound_controller.cpp
src/: CMakeLists.txt  build_version.hpp.in  engine.cpp  engine2.cpp  engine_version.cpp  levk.cpp  levk_impl.hpp  main.cpp  scene_node.cpp
src/assets/: asset.cpp  asset_converters.cpp  asset_list.cpp  asset_loaders.cpp  asset_manifest.cpp  asset_store.cpp  manifest.cpp  manifest.hpp  resources.cpp
src/cameras/: freecam.cpp
src/components/: spring_arm.cpp  trigger.cpp
src/ecs/: registry.cpp
src/editor/: asset_index.cpp  editor.cpp  editor.hpp  inspector.cpp  log_stats.cpp  main_menu.cpp  palette.cpp  palette_tab.cpp  panel.cpp  resizer.cpp  scene_tree.cpp  sudo.hpp
src/game/: freecam.cpp  input.cpp  input_context.cpp  input_impl.hpp  input_mapper.cpp  scene.cpp  scene_builder.cpp  spring_arm.cpp  state.cpp  state_impl.hpp  stopwatch.cpp  text2d.cpp  world.cpp
src/gfx/: camera.cpp  common.hpp  deferred.cpp  deferred.hpp  device.cpp  device.hpp  ext_gui.cpp  ext_gui.hpp  font.cpp  geometry.cpp  mesh.cpp  model.cpp  pipeline.cpp  pipeline_impl.hpp  render_cmd.cpp  render_cmd.hpp  render_context.cpp  render_context.hpp  render_driver.cpp  render_driver_impl.hpp  renderer.cpp  renderer_impl.hpp  resource_descriptors.cpp  resource_descriptors.hpp  screen_rect.cpp  shader.cpp  texture.cpp  vram.cpp  vram.hpp
src/gui/: dropdown.cpp  flexbox.cpp  node.cpp  quad.cpp  shape.cpp  text.cpp  tree.cpp  view.cpp  widget.cpp
src/input/: control.cpp  cursor_text.cpp  driver.cpp  input.cpp  space.cpp  text_cursor.cpp  text_cursor2.cpp
src/physics/: collision.cpp
src/render/: bitmap_font.cpp  bitmap_text.cpp  descriptor_helper.cpp  drawable.cpp  list_drawer.cpp  list_renderer.cpp  mesh_provider.cpp  model.cpp  pipeline.cpp  quad_emitter.cpp  shader_data.cpp  skybox.cpp  text_mesh.cpp
src/resources/: asset_list.cpp  manifest.cpp  manifest.hpp  model_impl.cpp  model_impl.hpp  monitor.cpp  monitor.hpp  resource_list.cpp  resources.cpp  resources_impl.hpp  shader_compiler.cpp  types_impl.cpp
src/scene/: asset_provider.cpp  draw_list_factory.cpp  draw_list_gen.cpp  list_drawer.cpp  material.cpp  material_map.cpp  mesh_provider.cpp  prop_provider.cpp  scene_drawer.cpp  scene_node.cpp  scene_registry.cpp  skybox.cpp
src/systems/: gui_system.cpp  physics_system.cpp  scene_clean_system.cpp  spring_arm_system.cpp  system.cpp  system_group.cpp  systems.cpp
src/tests/: CMakeLists.txt  ecs_test.cpp  ecs_test.hpp
src/utils/: command_line.cpp  engine_config.cpp  env.cpp  error_handler.cpp  sys_info.cpp
src/version/: build_version.hpp.in  engine_version.cpp
src/window/: input_types.cpp  native_window.cpp  native_window.hpp  window.cpp  window.hpp  window_impl.cpp  window_impl.hpp
tests/: CMakeLists.txt  any_test.cpp  decf_test.cpp  delegate_test.cpp  dens_test.cpp  ec_test.cpp  ecs_test.cpp  fixed_vector_test.cpp  hash_test.cpp  monotonic_map_test.cpp  pipe_hash_test.cpp  test_result.cpp
tests/test/: test.cpp  test.hpp
tests/tests/: CMakeLists.txt  test_result.cpp
(+2099 files in other folders)
